# RustC2

./: .cursorrules  .gitignore  Cargo.toml  README.md
client/src/: main.rs
server/src/: main.rs
src/: main.rs
