[package]
name = "rustc2"
version = "0.1.0"
edition = "2021"
authors = ["David Chase davidc0330@gmail.com"]
description = "POC Async command and control server implementation in Rust for learning and research purposes only"


[dependencies]
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"